# Self-Correcting-RAG

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/docs/: doc1.txt  doc2.txt  doc3.txt
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
src/: config.py  embeddings.py  evaluator_agent.py  generator_agent.py  guardrail_agent.py  llm_client.py  pipeline.py  retriever.py
src/scrag/: __init__.py  chunking.py  cli.py  config.py  container.py  embeddings.py  ingest.py  logging_config.py  models.py  pipeline.py  retriever.py
src/scrag/agents/: __init__.py  _parsing.py  evaluator.py  generator.py  guardrail.py
src/scrag/api/: __init__.py  app.py  routes.py
src/scrag/llm/: __init__.py  client.py
src/scrag/vectorstore/: __init__.py  base.py  faiss_store.py  numpy_store.py
tests/: conftest.py  test_agents.py  test_api.py  test_chunking.py  test_numpy_store.py  test_pipeline.py
