[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-correcting-rag"
version = "0.1.0"
description = "A production-grade, self-correcting multi-agent Retrieval-Augmented Generation pipeline with a REST API and CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Syed Waleed Ahmed" }]
keywords = ["rag", "llm", "retrieval", "agents", "fastapi", "groq", "openai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

# Core runtime stays lightweight so the package imports (and its test suite runs)
# without the heavy embedding stack. Install the `local` extra for real embeddings.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "openai>=1.30",
    "numpy>=1.23",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Default local embedder (sentence-transformers pulls torch — heavy).
local = ["sentence-transformers>=2.7", "torch>=2.0"]
# Optional approximate/scalable vector backend.
faiss = ["faiss-cpu>=1.7"]
# Everything needed to run the app for real.
all = ["sentence-transformers>=2.7", "torch>=2.0", "faiss-cpu>=1.7"]
# Development / CI.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Waleed-Dexter/Self-Correcting-RAG"
Repository = "https://github.com/Waleed-Dexter/Self-Correcting-RAG"

[project.scripts]
scrag = "scrag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scrag = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["B008"]  # Typer/FastAPI use function calls in argument defaults by design.

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["scrag"]
branch = true
